test/corpus/latin_abbrevs.txt
==================
Single-token Latin abbreviations
==================

R/ amoxicilline 500mg
S/ b.d.d. 1 caps p.c. gedurende 7 dagen

---

(source_file
  (rx_section
    (rx_marker)
    (ingredient_line
      (word)
      (dose (number) (unit))))
  (signa_section
    (signa_marker)
    (signa_line
      (frequency_abbrev)
      (dose (number) (unit))
      (timing_abbrev)
      (word)
      (number)
      (word))))

==================
Multi-word Latin abbreviations
==================

R/ prednisolon 5mg
S/ d.s. monit. 2 tablets q.i.d. a.c.

---

(source_file
  (rx_section
    (rx_marker)
    (ingredient_line
      (word)
      (dose (number) (unit))))
  (signa_section
    (signa_marker)
    (signa_line
      (dispensing_abbrev)
      (dose (number) (unit))
      (frequency_abbrev)
      (timing_abbrev))))

==================
Emergency and warning markers
==================

R/ adrenaline 1mg
S/ CITO i.m. z.n.

---

(source_file
  (rx_section
    (rx_marker)
    (ingredient_line
      (word)
      (dose (number) (unit))))
  (signa_section
    (signa_marker)
    (signa_line
      (warning_abbrev)
      (route_abbrev)
      (dispensing_abbrev))))

==================
Uppercase and dotless route variants
==================

R/ ibuprofen 400mg
S/ 3 dd 1 tablet PO p.c.
S/ 1 IV stat
S/ 2 dd 1 I.M.

---

(source_file
  (rx_section
    (rx_marker)
    (ingredient_line
      (word)
      (dose (number) (unit))))
  (signa_section
    (signa_marker)
    (signa_line
      (frequency)
      (dose (number) (unit))
      (route_abbrev)
      (timing_abbrev)))
  (signa_section
    (signa_marker)
    (signa_line
      (number)
      (route_abbrev)
      (warning_abbrev)))
  (signa_section
    (signa_marker)
    (signa_line
      (frequency)
      (number)
      (route_abbrev))))

==================
Multi-word route with sentence-case
==================

R/ amoxicilline 500mg
S/ 1 caps per os
S/ Per rectum z.n.

---

(source_file
  (rx_section
    (rx_marker)
    (ingredient_line
      (word)
      (dose (number) (unit))))
  (signa_section
    (signa_marker)
    (signa_line
      (dose (number) (unit))
      (route_abbrev)))
  (signa_section
    (signa_marker)
    (signa_line
      (route_abbrev)
      (dispensing_abbrev))))

==================
Cito casing variants
==================

R/ epinephrine 1mg
S/ cito i.v.
S/ Cito i.m.

---

(source_file
  (rx_section
    (rx_marker)
    (ingredient_line
      (word)
      (dose (number) (unit))))
  (signa_section
    (signa_marker)
    (signa_line
      (warning_abbrev)
      (route_abbrev)))
  (signa_section
    (signa_marker)
    (signa_line
      (warning_abbrev)
      (route_abbrev))))
